test/fails/bad_types/vec_decl.lgl
vec2 v = [1., 1., 1.];
print v;